.. This file should contain the changes for the last release only, which
   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

4.0b2 - Unreleased
------------------

- Stop removing the $ alias for jQuery, since many plugins rely on it. Users
  worried about conflicts with other libraries can customize
  jquery-integration.js and set jq = jQuery.noConflict() again, instead of
  jq = jQuery
  [davisagli, limi]

- For Managers, make default_error_message display tracebacks inline rather
  than linking to them.
  [davisagli, limi]

- Fixed livesearch_reply.py to give the context to ts.translate method.
  [vincentfretin]

- Fixed plone_scripts/translate.py to use translation_service.translate
  method. translation_service.utranslate was removed in recent version of
  PlacelessTranslationService.
  [vincentfretin]

- Reverted default message for description_group_members_of in
  plone_deprecated/prefs_group_members.cpt
  [vincentfretin]

- Fixed help_biography message.
  [vincentfretin]

- Internationalized the backup-warning message in plone-upgrade.pt.
  [vincentfretin]

- Removed template_id from batch_base_url in batch_macros.pt because it breaks
  when overloading the folder_listing template via zcml.
  [thet]

- Convert limit_display to int in folder_tabular_view.pt and folder_listing.pt
  so that it can be fed in via request parameters.
  [thet]

4.0b1 - 2010-03-08
------------------

- "Event when" improved for better i18n.  
   This closes http://dev.plone.org/plone/ticket/10196
   [gotcha]

- Adjust the tests now that `DateTime` objects are stored with a time zone.
  Refs http://dev.plone.org/plone/ticket/10141
  [witsch]

- Fix issues with sliding modification/publishing dates by using `DateTime`'s
  `ISO8601` method instead of `ISO`, which doesn't include time zones.
  Refs http://dev.plone.org/plone/ticket/10140, 10141 & 10171.
  [davisagli, witsch]
